# cpp-project

./: CMakeLists.txt  test_adam.cpp  test_all_phases.cpp  test_bce.cpp  test_log.cpp  test_softmax_ce.cpp
autodiff/: CMakeLists.txt  graph.h  node.cpp  node.h
engine/: CMakeLists.txt  ann_model.cpp  ann_model.h  cnn_model.cpp  cnn_model.h  engine.cpp  engine.h  model.h
layers/: CMakeLists.txt  dense.cpp  dense.h  layer.h  relu.cpp  relu.h
tensor/: CMakeLists.txt  tensor.cpp  tensor.h
trainer/: CMakeLists.txt  loss.cpp  loss.h  optimizer.cpp  optimizer.h  trainer.cpp  trainer.h
